# api-monettra

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Makefile  compose.yml  main.py  pyproject.toml
.github/workflows/: production.yml  staging.yml
db/: migrations.py  schema.sql  seed_categories.py
db/alembic/: env.py
db/alembic/versions/: 3f8c1a2e9b0d_add_payment_method_to_subscriptions.py  57af61b7c978_enhance_subscriptions_billing_date_icon_.py  6145df08611a_add_planning_entries_table.py  6b8b704c9456_create_base_table.py  78abcf9a7f1b_subscription_to_transactions.py  7a90b4f84537_add_multi_tenant_accounts.py  80ad28d3519d_subscription_renewals_and_enum_cleanup.py  84011e6ac100_add_recurrence_id_to_transactions.py  bf0587e8b1c4_add_owner_id_to_transactions.py  c3772ece563f_create_table_categories.py  c9f2a4b1d8e7_credit_cards_and_invoices.py  ccd8557a5e3f_create_table_planning.py  d2f7e41b92aa_add_source_to_ofx_imports.py  db5e52285a1d_initial_schema.py  dfc1ef3461fb_create_base_table.py  eb66a5691374_create_subscriptions_table.py
src/http/: routes.py
src/modules/accounts/: accounts_controller.py  (+2 more)
src/repository/: account_repository.py  analytics_repository.py  category_repository.py  credit_card_repository.py  ofx_import_repository.py  planning_repository.py  subscription_renewal_repository.py  subscription_repository.py  transaction_repository.py  user_repository.py
src/schemas/: __init__.py  accounts.py  base.py  categories.py  credit_cards.py  ofx_imports.py  planning.py  subscription_renewals.py  subscriptions.py  transactions.py  users.py
(+43 files in other folders)
